--- a/PC/ppt.html
+++ b/PC/ppt.html
@@ -24,9 +24,9 @@
 
 <div id="start" class="step slide" data-x="-1000" data-y="-1500">
     <q style="text-align: center; margin-top: 180px;">
-        自我介绍
+        我的路
     </q>
-    <q style="width:250px; height: 250px; float: right; text-align: right;">
+    <q style="width:250px; height: 250px; float: right; text-align: right;margin-top: 200px;">
         轩与<br/>
         2014.9
     </q>
@@ -44,7 +44,7 @@
     <q style="margin-left: 100px; margin-top:50px; ">
         <span style="margin-bottom: 50px;">个人特点</span>
         <ul style="font-size:40px; list-style:disc;">
-            <li>喜欢思考，喜欢了解原因</li>
+            <li>爱思考，喜欢了解原因</li>
             <li>不喜欢吃饭，觉得吃饭是一种负担</li>
             <li>对各种新奇事物的好奇心</li>
         </ul>
@@ -67,159 +67,137 @@
     </div>
 </div>
 
-<div class="step" data-x="3500" data-y="2100" data-rotate="180" data-scale="2">
+<div class="step slide" data-x="3500" data-y="2100" data-rotate="180" data-scale="2">
     <q>游戏之路</q>
 
     <ul style="font-size: 30px;">
-        <li>人生中第一部游戏机：任天堂红白机FC，在上海第一百货购买</li>
-        <li>拥有的游戏机：FC、MD、GB/GBA、PS1/2/3、Saturn、PSP、PSV等</li>
-        <li>第一个单机游戏：魂斗罗，最佳战绩：3条命，复版3次，一次不死，命奖励到36条</li>
-        <li>喜欢的游戏：最终幻想系列，梦幻模拟战II、三国志III、英雄传说系列、山脊赛车、战神系列 ...</li>
-        <li>最喜欢的PC游戏：轩辕剑系列 仙剑奇侠传、 Diablo I/II，使命召唤系列，刺客信条系列、鬼武士系列...</li>
+        <li>第一部游戏机：<a target="_blank" href="http://baike.baidu.com/view/245801.htm?from_id=24231&type=syn&fromtitle=FC&fr=aladdin">任天堂红白机FC</a>，在上海第一百货购买</li>
+        <li>拥有过的游戏机：FC、MD、GB/GBA/GBC、PS1/2/3、Saturn、DreamCast,XBOX、PSP、PSV等</li>
+        <li>喜欢的游戏类型：RPG，A*PRG、SLG、RAC、FPS、STG、PUZ等</li>
+        <li>热衷的单机游戏：最终幻想系列，梦幻模拟战II、三国志III、英雄传说系列、山脊赛车、战神系列 ...</li>
+        <li>热衷的PC游戏：轩辕剑系列 仙剑奇侠传、 Diablo I/II，使命召唤系列，刺客信条系列、鬼武士系列 Eve...</li>
         <li>最疯狂的时候：每天除了6小时睡觉，就是玩游戏，连续一周，体重轻了6斤</li>
-        <li>总结一句话：基本玩腻了，现在只是跟一下风，看一下剧情，其他就没有了</li>
+        <li style="font-size:30px;">总结一句话：基本玩的没感觉了，现在只是跟一下风，看一下剧情和画面，其他就没有了</li>
     </ul>
 </div>
 
-<div id="its" class="step" data-x="850" data-y="3000" data-rotate="90" data-scale="3">
+<div id="its" class="step slide" data-x="850" data-y="3000" data-rotate="90" data-scale="3">
     <q>电影之路</q>
     <ul style="font-size: 30px;">
-        <li>人生中第一部美国大片：真实的谎言</li>
+        <li>第一部电影：1978年版超人</li>
+        <li>第一部3D电影：国产片《魔术师的奇遇》</li>
+        <li>第一部震撼到的美国大片：真实的谎言</li>
         <li>让我思考最久的影片：黑客帝国</li>
+        <li>唯一一部让我印象较深的中国武打片：少林寺</li>
         <li>印象颇深的cult片：mulholland drive（穆赫兰道）</li>
         <li>让我情感触动的影片：泰坦尼克</li>
         <li>心目中最佳的星际片：星球大战</li>
+        <li>感觉赏心悦目的电影：暮光之城1，（能把吸血鬼影片拍成偶像剧的感觉）后面几集都是垃圾</li>
         <li>史诗级架构历史片：魔戒</li>
         <li>总共看的电影数量不少于800部</li>
-        <li style="font-size:20px;">其他：搏击俱乐部，蝙蝠侠，校生克的救赎，天使爱美丽，放牛班的春天...多如牛毛</li>
+        <li style="font-size:24px;">其他：加勒比海盗，搏击俱乐部，蝙蝠侠，校生克的救赎，天使爱美丽，放牛班的春天，耶稣的救赎...多如牛毛</li>
     </ul>
 </div>
 
-<div id="movie" class="step" data-x="5000" data-y="5000" data-rotate="90" data-scale="3">
+<div id="movie" class="step slide" data-x="5000" data-y="5000" data-rotate="90" data-scale="3">
     <q>美剧之路</q>
     <ul style="font-size: 30px;">
-        <li>看过的最长的一步美剧：老友记</li>
+        <li>看过的最长的一部美剧：老友记</li>
         <li>近几年能让我记住的剧集：神探夏洛克（英剧）bones 绝命毒师 权利的游戏 斯巴达克斯</li>
         <li>以往看过映象较深刻的：越狱 英雄 24小时</li>
         <li>锻炼人的恶心忍耐度的美剧：bones</li>
+        <li>印象比较深刻的台湾剧：新白娘子传奇</li>
+        <li>主动看过的唯一一部完整的琼瑶阿姨的剧：青青河边草、被看过无数遍还珠格格1,2,3</li>
+        <li>看过的经典港片：霍元甲、上海滩等、日剧:神，多给我一点时间，同一屋檐下、东爱等，韩剧：冬日恋歌等</li>
+        <li>曾被看过：泰剧、台剧、印度剧、很多不知道是哪个国家的剧...</li>
     </ul>
 </div>
 
-<div id="tiny" class="step" data-x="8000" data-y="7000" data-z="-3000" data-rotate="300" data-scale="1">
+<div id="tiny" class="step slide" data-x="8000" data-y="7000" data-z="-3000" data-rotate="300" data-scale="1">
     <q>动漫之路</q>
 
     <ul style="font-size: 30px;">
-        <li>人生中第一套也是唯一一套日本漫画书：七龙珠</li>
+        <li>人生中第一套也是唯一一套完整的日本漫画书：七龙珠</li>
         <li>国产 比较赞的动画（古老）：阿凡提、大闹天宫、天书奇谭、宝莲灯等</li>
         <li>国产 比较赞的动画（现代）：秦时明月</li>
-        <li>日本 比较赞的动画：宫崎骏系列（千与千寻、幽灵公主...）棋魂 猎人*猎人 ...</li>
-        <li>日本 有点印象的动画：黑执事 灼眼的夏娜</li>
+        <li>日本 比较赞的动画：宫崎骏系列（千与千寻、幽灵公主...）棋魂 猎人*猎人 浪客剑心 ...</li>
+        <li>日本 有点印象的动画：黑执事 灼眼的夏娜、很多很多...</li>
         <li>现在还在跟进的动画：猎人*猎人（2011版）火影 海贼王</li>
         <li>让我恶心的动画：大头儿子和小头爸爸 贝塔与舒克 圣斗士星矢（打不死的小强）</li>
     </ul>
 </div>
 
-<div class="step" data-x="8000" data-y="5000" data-rotate="180" data-scale="1">
+<div class="step slide" data-x="8000" data-y="5000" data-rotate="180" data-scale="1">
     <q>学业之路</q>
 
     <ul style="font-size: 30px;">
-        <li>小学成绩基本倒数，逃课无数，4、5年纪下午基本没上过课，曾被数学老师下诅咒：此人理科水平此生无望（开家长会对我妈说的）</li>
-        <li>初中碰到了 鬼冢老师 彻底改变学路，成为二流学霸，从第二年开始每次考试，英语成绩所有考试永远排名第一、二（没考过低于98的），语文永远倒数前三名，没出过前5</li>
+        <li>小学成绩基本倒数，逃课无数，4、5年级下午基本没上过课，曾被数学老师下诅咒：此人理科水平此生无望（开家长会对我妈说的）</li>
+        <li>初中碰到了 鬼冢老师 彻底改变学路，成为二流学霸，从初一开始的每次考试，英语成绩所有考试永远全校排名第一、二（没考过低于98的），语文永远倒数前三名，没出过前5</li>
         <li>高中 物理课代表 - 帮无数人开小灶 补数学、物理、生物、地理、化学等</li>
-        <li>莫名进了211大学，开始迷茫</li>
+        <li>莫名进了211大学，开始迷茫，曾担任过哲学课代表，考试的时候帮无数同学作弊...</li>
     </ul>
 </div>
 
-<div class="step" data-x="9000" data-y="5000" data-rotate="0" data-scale="0.8">
-    <q>职业之路</q>
+<div class="step slide" data-x="9000" data-y="5000" data-rotate="0" data-scale="0.8">
+    <q>IT之路</q>
 
-
-</div>
-
-<div id="howtomakerotate" class="step" data-x="10000" data-y="5000" data-rotate="0" data-scale="1">
-    <div>渲染引擎实际如何处理css变形的？</div>
-    <ol style="list-style-type: decimal;">
-        <li id="trans_first">首先读取样式方法</li>
-        <li id="trans_second">将所对应的样式转换成matrix变形矩阵</li>
-        <li id="trans_third">对于多个样式所对应的矩阵进行逐个相乘，计算出最终的matrix变形矩阵</li>
-        <li id="trans_final">将最终的matrix变形矩阵进行相应的图形渲染</li>
-    </ol>
+    <ul style="font-size: 30px;">
+        <li>高二的时候：1万元买了一台计算机（配置？）</li>
+        <li>windows操作系统：DOS、Window32、Windows95/97/98/ME，windows2000，windows xp，windows 2003，windows vista...</li>
+        <li>大学开始玩硬件DIY，CPU、内存、主板(南北桥，电压)、显卡、声卡、电源...(VoDoo)，玩了近10年，周围的亲戚朋友电脑坏了，基本找我搞定，不过自从流行笔记本后，维修次数少了</li>
+        <li>工作之后，开始玩网络设备：hub、交换机，路由器、ADSL、AP，考了一张证书CCNP，花了8000大洋</li>
+        <li>编程语言：pascal，visual basic，asp，.net,java,php,foxpro,mssql,mysql,oracle,html,css,javascript,android...</li>
+        <li>近几年开始玩手机（<a href="http://baike.baidu.com/view/27225.htm">PALM</a>）</li>
+    </ul>
 </div>
 
 <div id="ing" class="step slide" data-x="3500" data-y="-850" data-rotate="270" data-scale="2">
-    <h1>已上面的例子为例 - 渲染引擎处理transform的过程</h1>
-    <ul style="list-style: circle;">
-        <li>将scale(cos(30deg),cos(30deg))矩阵化matrix(cos(30deg),0,0,cos(30deg),0,0)</li>
-        <li>将skew(-30deg,30deg)矩阵化matrix(1,tan(30deg),tan(-30deg),1,0,0)</li>
-        <li>将当前的2d坐标矩阵分别乘以以上两个矩阵，最终得到matrix(cos(30deg),sin(30deg),-sin(30deg),cos(30deg))</li>
-        <li>将最终的matrix变形矩阵换算成相应的2d坐标，最后得到最终位置</li>
-    </ul>
-    <div style="font-size: 24px">
-        [x,y,1]*[matrix(cos(30deg),sin(30deg),-sin(30deg),cos(30deg),0,0,1)]=
-        [x*cos(30deg)-y*sin(30deg)+0,ysin(30deg)+x*cos(30deg)+0,0+0+1]
-    </div>
-    <!--<script type="text/javascript" src="js/circle.js"></script>-->
-    <!--<p>by <b class="positioning">positioning</b>, <b class="rotating">rotating</b> and <b-->
-    <!--class="scaling">scaling</b> them on an infinite canvas</p>-->
-</div>
+    <q>parttime之路</q>
 
-<div id="imagination" class="step" data-x="6700" data-y="-300" data-scale="6">
-    <p>Matrix3D提供了更加强大的3D空间变换</p>
+    <ul style="font-size: 30px;">
+        <li>修过电脑</li>
+        <li>修过打印机（芯片级）</li>
+        <li>参加过安利</li>
+        <li>做过网管</li>
+        <li>开过私服</li>
+        <li>做过垃圾站点</li>
+    </ul>
 </div>
 
 <div id="source" class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
-    <p>Matrix3d的几个重要方法</p>
-    <ul style="list-style:disc;">
-        <li>translate3d</li>
-        <li>scale3d</li>
-        <li>rotate3d</li>
-        <li>skew</li>
-        <li>perspective</li>
+    <q>路上的几次选择</q>
+
+    <ul style="font-size: 30px;">
+        <li>化学与计算机的选择</li>
+        <li>工作与研究生的选择</li>
+        <li>国企与私企的选择</li>
+        <li>公务员与普通劳动者的选择</li>
+        <li>创业与打工的选择</li>
+        <li>国内与国外的选择</li>
     </ul>
 </div>
 
-<div id="persp" class="step" data-x="10000" data-y="2000" data-rotate="20" data-scale="4">
-    <div id="view3d" style="-webkit-perspective: 400px;">
-        <div class="tilted" style="-webkit-transform: rotateX(45deg); -webkit-transform-origin: 50% 80%;">
-            <p>
-                Once upon a time, in a third dimension far, far, away, a paragraph of text went
-                on and on and on and on and on and on and on and on and on and on and on
-                on and on and on and on and on and on and on and on and on and on and on...
-            </p>
-        </div>
-    </div>
+<div class="step" data-x="10000" data-y="2000" data-rotate="20" data-scale="4">
+    <q>一次说走就走的旅行</q>
 
-    <p>Perspective:</p>
-    <input type="range" min="150" max="800" value="400" step="5" onchange="setView(value);">
-
-    <p id="showVal"> 400px </p>
-    <script type="text/javascript">
-        function setView(value) {
-            document.getElementById("showVal").innerHTML = value + "px";
-            document.getElementById("view3d").style.webkitPerspective = value + "px";
-        }
-
-    </script>
+    <ul style="font-size: 30px;">
+        <li>为了一个想法</li>
+        <li>三个月的安排</li>
+        <li>独立一个人背包去英国3周时间</li>
+        <li>基本游遍英国主要城市将近15个</li>
+        <li>感知到了英国的特点</li>
+        <li>感受了很不一样的文化</li>
+    </ul>
 </div>
 
-<div id="3demo" class="step" data-x="7300" data-y="4000" data-rotate="20" data-scale="1">
-    <div>Matrix3D和3D变形方法之间的关系</div>
-    <div style="font-size: 30px;">
-		Translate matrix — matrix3d(1,0,0,tX,0,1,0,tY,0,0,1,tZ,0,0,0,1)<br/>
-        Scale matrix — matrix3d(sX,0,0,0,0,sY,0,0,0,0,sZ,0,0,0,0,1)<br/>
-        RotateX(a) matrix — matrix3d(1,0,0,0,0,cos(a),sin(a),0,0,sin(-a),cos(a),0,0,0,0,1)<br/>
-        RotateY(a) matrix — matrix3d(cos(a),0,sin(-a),0,0,1,0,0,sin(a),0,cos(a),0,0,0,0,1)
-    </div>
-</div>
-
-<div id="one-more-thing" class="step" data-x="6000" data-y="4000" data-scale="2">
-    <a href="3ddemo.html" target="_blank">一个简单的3d cube的示例</a>
-</div>
-
-<div id="its-in-3d" class="step" data-x="6200" data-y="4300" data-z="-100" data-rotate-x="-40" data-rotate-y="10"
-     data-scale="2">
-    <p><span class="have">谢谢</span> <span class="you">观赏</span> <span class="noticed">基于</span>
-        <span class="its">impress.js</span> <span class="in">模板</span><b>的HTML5<sup>PPT</sup></b></p>
+<div class="step" data-x="7300" data-y="6000" data-rotate="20" data-scale="1">
+    <q>路上的一些思考与结论</q>
+    <ul style="font-size: 30px;">
+        <li>如果喜欢就认真去喜欢，并且接受过程中带来的各种情绪，如果不喜欢，立马离开</li>
+        <li>如果不知道自己想要什么，则认认真真做好手上每件事情，不要费太多时间去犹豫和徘徊</li>
+        <li>罗马不是一天建成的，也不是三天打渔，七天晒网能建成的</li>
+        <li>唯物主义和唯心主义</li>
+    </ul>
 </div>
 
 <div id="question" class="step" data-x="6500" data-y="4800" data-rotate="180">
