--- a/PC/ppt.html
+++ b/PC/ppt.html
@@ -24,12 +24,13 @@
 
 <div id="start" class="step slide" data-x="-1000" data-y="-1500">
     <q style="text-align: center; margin-top: 180px;">
-        我的路
+        路中回顾
     </q>
     <q style="width:250px; height: 250px; float: right; text-align: right;margin-top: 200px;">
         轩与<br/>
         2014.9
     </q>
+
     <div id="sphere" class="contact">
         <div class="rotator">
             <div class="container"></div>
@@ -44,14 +45,14 @@
     <q style="margin-left: 100px; margin-top:50px; ">
         <span style="margin-bottom: 50px;">个人特点</span>
         <ul style="font-size:40px; list-style:disc;">
-            <li>爱思考，喜欢了解原因</li>
-            <li>不喜欢吃饭，觉得吃饭是一种负担</li>
-            <li>对各种新奇事物的好奇心</li>
+            <li>爱思考，不爱说话</li>
+            <li>不喜欢吃饭，一直觉得吃饭是一种负担</li>
+            <li>对各种新事物的好奇心</li>
         </ul>
     </q>
 </div>
 
-<div id="title" style="background-color: black;width:1500px;height: 1000px; z-index: 0" class="step" data-x="0"
+<div id="title" style="background-color: black;width:1500px;height: 1000px; z-index: 0;" class="step" data-x="0"
      data-y="0" data-scale="1">
     <div id="container">
         <div id="frame">
@@ -71,12 +72,25 @@
     <q>游戏之路</q>
 
     <ul style="font-size: 30px;">
-        <li>第一部游戏机：<a target="_blank" href="http://baike.baidu.com/view/245801.htm?from_id=24231&type=syn&fromtitle=FC&fr=aladdin">任天堂红白机FC</a>，在上海第一百货购买</li>
-        <li>拥有过的游戏机：FC、MD、GB/GBA/GBC、PS1/2/3、Saturn、DreamCast,XBOX、PSP、PSV等</li>
+        <li>第一部游戏机：<a target="_blank"
+                      href="http://baike.baidu.com/view/245801.htm?from_id=24231&type=syn&fromtitle=FC&fr=aladdin">任天堂红白机FC</a>，在上海第一百货购买
+        </li>
+        <li>拥有过的游戏机：FC、MD、GB/GBA/GBC、PS1/2/3、Saturn、DreamCast,XBox、PSP、PSV等</li>
         <li>喜欢的游戏类型：RPG，A*PRG、SLG、RAC、FPS、STG、PUZ等</li>
-        <li>热衷的单机游戏：最终幻想系列，梦幻模拟战II、三国志III、英雄传说系列、山脊赛车、战神系列 ...</li>
-        <li>热衷的PC游戏：轩辕剑系列 仙剑奇侠传、 Diablo I/II，使命召唤系列，刺客信条系列、鬼武士系列 Eve...</li>
-        <li>最疯狂的时候：每天除了6小时睡觉，就是玩游戏，连续一周，体重轻了6斤</li>
+        <li>曾经热衷的单机游戏：最终幻想系列，梦幻模拟战II、三国志III、英雄传说系列、山脊赛车、战神系列 ...</li>
+        <li>心目中经典的PC游戏：轩辕剑系列 仙剑奇侠传、 Diablo I/II，使命召唤系列，刺客信条系列、鬼武士系列 Eve...</li>
+    </ul>
+</div>
+
+<div class="step slide" data-x="7500" data-y="3500" data-rotate="360" data-scale="2">
+    <q>游戏之路2</q>
+
+    <ul style="font-size: 30px;">
+        <li>最疯狂的时候：
+            <br/>1、某个暑假，每天除了6小时睡觉，就是玩游戏，连续一周，体重轻了6斤
+            <br/>2、刚进大学，修养了1个月，急性肝炎，原因是暑假玩的太high，伤身了
+        </li>
+        <li>喜欢玩游戏，也喜欢改游戏</li>
         <li style="font-size:30px;">总结一句话：基本玩的没感觉了，现在只是跟一下风，看一下剧情和画面，其他就没有了</li>
     </ul>
 </div>
@@ -95,12 +109,12 @@
         <li>感觉赏心悦目的电影：暮光之城1，（能把吸血鬼影片拍成偶像剧的感觉）后面几集都是垃圾</li>
         <li>史诗级架构历史片：魔戒</li>
         <li>总共看的电影数量不少于800部</li>
-        <li style="font-size:24px;">其他：加勒比海盗，搏击俱乐部，蝙蝠侠，校生克的救赎，天使爱美丽，放牛班的春天，耶稣的救赎...多如牛毛</li>
+        <li style="font-size:24px;">其他：终结者，加勒比海盗，搏击俱乐部，蝙蝠侠，校生克的救赎，天使爱美丽，放牛班的春天，耶稣的救赎...多如牛毛</li>
     </ul>
 </div>
 
 <div id="movie" class="step slide" data-x="5000" data-y="5000" data-rotate="90" data-scale="3">
-    <q>美剧之路</q>
+    <q>电视剧之路</q>
     <ul style="font-size: 30px;">
         <li>看过的最长的一部美剧：老友记</li>
         <li>近几年能让我记住的剧集：神探夏洛克（英剧）bones 绝命毒师 权利的游戏 斯巴达克斯</li>
@@ -118,10 +132,10 @@
 
     <ul style="font-size: 30px;">
         <li>人生中第一套也是唯一一套完整的日本漫画书：七龙珠</li>
-        <li>国产 比较赞的动画（古老）：阿凡提、大闹天宫、天书奇谭、宝莲灯等</li>
+        <li>国产 比较赞的动画（远古）：阿凡提、大闹天宫、天书奇谭（上）、宝莲灯（上）等</li>
         <li>国产 比较赞的动画（现代）：秦时明月</li>
         <li>日本 比较赞的动画：宫崎骏系列（千与千寻、幽灵公主...）棋魂 猎人*猎人 浪客剑心 ...</li>
-        <li>日本 有点印象的动画：黑执事 灼眼的夏娜、很多很多...</li>
+        <li>日本 有点印象的动画：黑执事 灼眼的夏娜、空之境界 很多很多...</li>
         <li>现在还在跟进的动画：猎人*猎人（2011版）火影 海贼王</li>
         <li>让我恶心的动画：大头儿子和小头爸爸 贝塔与舒克 圣斗士星矢（打不死的小强）</li>
     </ul>
@@ -165,7 +179,7 @@
 </div>
 
 <div id="source" class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
-    <q>路上的几次选择</q>
+    <q>半路上的几次选择</q>
 
     <ul style="font-size: 30px;">
         <li>化学与计算机的选择</li>
@@ -178,12 +192,12 @@
 </div>
 
 <div class="step" data-x="10000" data-y="2000" data-rotate="20" data-scale="4">
-    <q>一次说走就走的旅行</q>
+    <q>一个人的旅行</q>
 
     <ul style="font-size: 30px;">
-        <li>为了一个想法</li>
-        <li>三个月的安排</li>
-        <li>独立一个人背包去英国3周时间</li>
+        <li>一个想法</li>
+        <li>二个月的安排</li>
+        <li>一个人背包去英国3周时间</li>
         <li>基本游遍英国主要城市将近15个</li>
         <li>感知到了英国的特点</li>
         <li>感受了很不一样的文化</li>
@@ -191,9 +205,9 @@
 </div>
 
 <div class="step" data-x="7300" data-y="6000" data-rotate="20" data-scale="1">
-    <q>路上的一些思考与结论</q>
+    <q>半路上的一些思考与结论</q>
     <ul style="font-size: 30px;">
-        <li>如果喜欢就认真去喜欢，并且接受过程中带来的各种情绪，如果不喜欢，立马离开</li>
+        <li>如果喜欢就认真去喜欢，并且接受过程中带来的各种感受，如果不喜欢，立马离开</li>
         <li>如果不知道自己想要什么，则认认真真做好手上每件事情，不要费太多时间去犹豫和徘徊</li>
         <li>罗马不是一天建成的，也不是三天打渔，七天晒网能建成的</li>
         <li>唯物主义和唯心主义</li>
@@ -208,6 +222,7 @@
     <h1>Thank you！</h1>
 </div>
 
+</div>
 <script type="text/javascript">
     if ("ontouchstart" in document.documentElement) {
         document.querySelector(".hint").innerHTML = "<p>Tap on the left or right to navigate</p>";
@@ -215,7 +230,21 @@
 </script>
 
 <script src="js/impress.js"></script>
-<script>impress().init();</script>
+<script>
+    impress().init();
+    var li = $('.step li');
+    li.each(function (index) {
+        if (index > 0) {
+            $(this).addClass("hide");
+        }
+    });
+    $(".step").click(function () {
+        if ($("li.hide", $(this)).length > 0) {
+            $("li.hide", $(this)).eq(0).removeClass("hide");
+        }
+    });
+</script>
+
 
 </body>
 </html>
