--- a/PC/ppt.html
+++ b/PC/ppt.html
@@ -90,12 +90,12 @@
             <br/>1、某个暑假，每天除了6小时睡觉，就是玩游戏，连续一周，体重轻了6斤
             <br/>2、刚进大学，修养了1个月，急性肝炎，原因是暑假玩的太high，伤身了
         </li>
-        <li>喜欢玩游戏，也喜欢改游戏</li>
+        <li>喜欢玩游戏，更喜欢改游戏</li>
         <li style="font-size:30px;">总结一句话：基本玩的没感觉了，现在只是跟一下风，看一下剧情和画面，其他就没有了</li>
     </ul>
 </div>
 
-<div id="its" class="step slide" data-x="850" data-y="3000" data-rotate="90" data-scale="3">
+<div class="step slide" data-x="850" data-y="3000" data-rotate="90" data-scale="3">
     <q>电影之路</q>
     <ul style="font-size: 30px;">
         <li>第一部电影：1978年版超人</li>
@@ -133,11 +133,11 @@
     <ul style="font-size: 30px;">
         <li>人生中第一套也是唯一一套完整的日本漫画书：七龙珠</li>
         <li>国产 比较赞的动画（远古）：阿凡提、大闹天宫、天书奇谭（上）、宝莲灯（上）等</li>
-        <li>国产 比较赞的动画（现代）：秦时明月</li>
+        <li>国产 比较赞的动画（现代）：秦时明月 画江湖之不良人</li>
         <li>日本 比较赞的动画：宫崎骏系列（千与千寻、幽灵公主...）棋魂 猎人*猎人 浪客剑心 ...</li>
         <li>日本 有点印象的动画：黑执事 灼眼的夏娜、空之境界 很多很多...</li>
         <li>现在还在跟进的动画：猎人*猎人（2011版）火影 海贼王</li>
-        <li>让我恶心的动画：大头儿子和小头爸爸 贝塔与舒克 圣斗士星矢（打不死的小强）</li>
+        <li>比较恶心的动画：大头儿子和小头爸爸 贝塔与舒克 圣斗士星矢（打不死的小强）</li>
     </ul>
 </div>
 
@@ -157,7 +157,7 @@
 
     <ul style="font-size: 30px;">
         <li>高二的时候：1万元买了一台计算机（配置？）</li>
-        <li>windows操作系统：DOS、Window32、Windows95/97/98/ME，windows2000，windows xp，windows 2003，windows vista...</li>
+        <li>微软操作系统：DOS、Window32、Windows95/97/98/ME，windows2000，windows xp，windows 2003，windows vista...</li>
         <li>大学开始玩硬件DIY，CPU、内存、主板(南北桥，电压)、显卡、声卡、电源...(VoDoo)，玩了近10年，周围的亲戚朋友电脑坏了，基本找我搞定，不过自从流行笔记本后，维修次数少了</li>
         <li>工作之后，开始玩网络设备：hub、交换机，路由器、ADSL、AP，考了一张证书CCNP，花了8000大洋</li>
         <li>编程语言：pascal，visual basic，asp，.net,java,php,foxpro,mssql,mysql,oracle,html,css,javascript,android...</li>
@@ -178,7 +178,7 @@
     </ul>
 </div>
 
-<div id="source" class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
+<div class="step" data-x="6300" data-y="2000" data-rotate="20" data-scale="4">
     <q>半路上的几次选择</q>
 
     <ul style="font-size: 30px;">
