--- a/PC/ppt.html
+++ b/PC/ppt.html
@@ -157,7 +157,7 @@
 
     <ul style="font-size: 30px;">
         <li>高二的时候：1万元买了一台计算机（配置？）</li>
-        <li>微软操作系统：DOS、Window32、Windows95/97/98/ME，windows2000，windows xp，windows 2003，windows vista...</li>
+        <li>熟悉的微软操作系统：DOS、Window32、Windows95/97/98/ME，windows2000,windows NT，windows xp，windows 2003，windows vista，windows 7,windows 8.1...</li>
         <li>大学开始玩硬件DIY，CPU、内存、主板(南北桥，电压)、显卡、声卡、电源...(VoDoo)，玩了近10年，周围的亲戚朋友电脑坏了，基本找我搞定，不过自从流行笔记本后，维修次数少了</li>
         <li>工作之后，开始玩网络设备：hub、交换机，路由器、ADSL、AP，考了一张证书CCNP，花了8000大洋</li>
         <li>编程语言：pascal，visual basic，asp，.net,java,php,foxpro,mssql,mysql,oracle,html,css,javascript,android...</li>
@@ -183,24 +183,22 @@
 
     <ul style="font-size: 30px;">
         <li>化学与计算机的选择</li>
-        <li>工作与研究生的选择</li>
+        <li>工作与考研的选择</li>
         <li>国企与私企的选择</li>
-        <li>公务员与普通劳动者的选择</li>
-        <li>创业与打工的选择</li>
+        <li>创业与工作的选择</li>
         <li>国内与国外的选择</li>
     </ul>
 </div>
 
 <div class="step" data-x="10000" data-y="2000" data-rotate="20" data-scale="4">
-    <q>一个人的旅行</q>
+    <q>一个人的英国旅行</q>
 
     <ul style="font-size: 30px;">
         <li>一个想法</li>
-        <li>二个月的安排</li>
-        <li>一个人背包去英国3周时间</li>
-        <li>基本游遍英国主要城市将近15个</li>
-        <li>感知到了英国的特点</li>
-        <li>感受了很不一样的文化</li>
+        <li>二个月的准备</li>
+        <li>三周的时间</li>
+        <li>15个英国主要城市</li>
+        <li>感知到了英国的特点，感受了很不一样的文化</li>
     </ul>
 </div>
 
